--- a/philschmid/2023-02-16-fine-tune-flan-t5-deepspeed.ipynb
+++ b/philschmid/2023-02-16-fine-tune-flan-t5-deepspeed.ipynb
@@ -5,15 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine-tune FLAN-T5 XL/XXL using DeepSpeed & Hugging Face Transformers\n",
+    "# 使用 DeepSpeed 和 Hugging Face 🤗 Transformer 微调 FLAN-T5 XL/XXL\n",
     "\n",
-    "FLAN-T5, released with the [Scaling Instruction-Finetuned Language Models](https://arxiv.org/pdf/2210.11416.pdf) paper, is an enhanced version of T5 that has been fine-tuned in a mixture of tasks, or simple words, a better T5 model in any aspect. FLAN-T5 outperforms T5 by double-digit improvements for the same number of parameters. Google has open sourced [5 checkpoints available on Hugging Face](https://huggingface.co/models?other=arxiv:2210.11416) ranging from 80M parameter up to 11B parameter.\n",
+    "译者: Matrix Yao (姚伟峰)\n",
     "\n",
-    "In a previous blog post, we already learned how to [“Fine-tune FLAN-T5 for chat & dialogue summarization”](https://www.philschmid.de/fine-tune-flan-t5) using [the base version (250M parameter)](https://huggingface.co/google/flan-t5-base) of the model. In this blog post, we look into how we can scale the training from the Base version to the [XL (3B)](https://huggingface.co/google/flan-t5-xl) or [XXL (11B)](https://huggingface.co/google/flan-t5-xxl). \n",
+    "[Scaling Instruction-Finetuned Language Models](https://arxiv.org/pdf/2210.11416.pdf) 论文发布了 FLAN-T5 模型，它是 T5 模型的增强版。FLAN-T5 由很多各种各样的任务微调而得，因此，简单来讲，它就是个方方面面都更优的 T5 模型。相同参数量的条件下，FLAN-T5 的性能相比 T5 而言有两位数的提高。Google 在 Hugging Face 上开源了 [5 个 FLAN-T5 的 checkpoints](https://huggingface.co/models?other=arxiv:2210.11416)，参数量范围从 8000 万  到 110 亿。\n",
     "\n",
-    "This means we will learn how to fine-tune FLAN-T5 XL & XXL using model parallelism, multiple GPUs, and [DeepSpeed ZeRO](https://www.deepspeed.ai/tutorials/zero/). \n",
+    "在之前的一篇博文中，我们已经学习了如何 [针对聊天对话数据摘要生成任务微调 FLAN-T5](https://www.philschmid.de/fine-tune-flan-t5)，那时我们使用的是 [Base (250M 参数)](https://huggingface.co/google/flan-t5-base) 模型。本文，我们将研究如何将训练从 Base 扩展到 [XL (30 亿参数)](https://huggingface.co/google/flan-t5-xl) 或 [XXL (110 亿参数)](https://huggingface.co/google/flan-t5-xxl)。\n",
     "\n",
-    "in addition to the tutorial, we have run a series of experiments to help you choose the right hardware setup. You can find the details in the Results & Experiments section."
+    "这意味着我们将学习如何利用模型并行、多 GPU 以及 [DeepSpeed ZeRO](https://www.deepspeed.ai/tutorials/zero/) 来微调 FLAN-T5 XL 和 XXL。\n",
+    "\n",
+    "除了作为教程的部分之外，我们还跑了一系列实验，这些实验数据可以帮助你选择正确的硬件设置。你可以在 **结果和实验** 部分找到详细信息。"
    ]
   },
   {
@@ -39,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Process dataset"
+    "# 处理数据集"
    ]
   },
   {
@@ -47,9 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the [“Fine-tune FLAN-T5 for chat & dialogue summarization”](https://www.philschmid.de/fine-tune-flan-t5) we need to prepare a dataset to fine-tune our model. As mentioned in the beginning, we will fine-tune [FLAN-T5-XXL](https://huggingface.co/google/flan-t5-xxl) on the [CNN Dailymail Dataset](https://huggingface.co/datasets/cnn_dailymail). The blog post is not going into detail about the dataset generation. If you want to learn the detailed steps check out the [previous post](https://www.philschmid.de/fine-tune-flan-t5). \n",
+    "与 [针对聊天对话的摘要生成任务微调 FLAN-T5](https://www.philschmid.de/fine-tune-flan-t5) 一文中类似，我们需要先准备一个用于微调的数据集。本文，我们将在 [CNN Dailymail 数据集](https://huggingface.co/datasets/cnn_dailymail) 上微调 [FLAN-T5-XXL](https://huggingface.co/google/flan-t5-xxl)。我们不会赘述如何生成数据集，如果你想了解数据集生成的详细步骤，请参阅前文提到的 [Fine Tune FLAN-T5](https://www.philschmid.de/fine-tune-flan-t5)。\n",
     "\n",
-    "We define some parameters, which we use throughout the whole example, feel free to adjust it to your needs."
+    "我们定义了一些参数，本文的示例都会基于这些参数，但你可以根据实际需要进行调整。"
    ]
   },
   {
@@ -58,14 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# experiment config\n",
-    "model_id = \"google/flan-t5-xxl\" # Hugging Face Model Id\n",
-    "dataset_id = \"cnn_dailymail\" # Hugging Face Dataset Id\n",
-    "dataset_config = \"3.0.0\" # config/verison of the dataset\n",
-    "save_dataset_path = \"data\" # local path to save processed dataset\n",
-    "text_column = \"article\" # column of input text is\n",
-    "summary_column = \"highlights\" # column of the output text \n",
-    "# custom instruct prompt start\n",
+    "# 实验性的配置\n",
+    "model_id = \"google/flan-t5-xxl\" # Hugging Face 模型 Id\n",
+    "dataset_id = \"cnn_dailymail\" # Hugging Face 数据集 Id\n",
+    "dataset_config = \"3.0.0\" # 数据集版本\n",
+    "save_dataset_path = \"data\" # 存放处理后数据的本地路径\n",
+    "text_column = \"article\" # 输入文本所属列\n",
+    "summary_column = \"highlights\" # 输出文本所属列\n",
+    "# 定制指令提示格式\n",
     "prompt_template = f\"Summarize the following news article:\\n{{input}}\\nSummary:\\n\""
    ]
   },
@@ -74,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compared to the [previous example](https://www.philschmid.de/fine-tune-flan-t5), we are splitting the processing and training into two separate paths. This allows you to run the preprocessing outside of the GPU instance. We process (tokenize) the dataset and save it to disk and then load in our train script from disk again."
+    "与 [Fine Tune FLAN-T5](https://www.philschmid.de/fine-tune-flan-t5) 不同，这次我们把预处理和训练分开。这样我们就可以在非 GPU 实例上运行预处理。我们先对数据集进行预处理 (即分词) 并将其保存到磁盘，然后训练脚本再从磁盘中加载预处理后的数据集。"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We defined a `prompt_template` in our config, which we will use to construct an instruct prompt for better performance of our model. Our `prompt_template` has a “fixed” start and end, and our document is in the middle. This means we need to ensure that the “fixed” template parts + document are not exceeding the max length of the model. Therefore we calculate the max length of our document, which we will later use for padding and truncation"
+    "我们在配置文件中定义了一个 `prompt_template`，其可用于来构建指令提示，以提高我们模型的性能。 `prompt_template` 有“固定”的开始词和结束词，文档放在中间。这意味着我们需要确保 **“固定”模板词 + 文档** 总长不超过模型支持的最大序列长度。因此我们需要计算模型支持的最大文档长度，稍后我们会根据它来填充或截断模板中的文档。"
    ]
   },
   {
@@ -136,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know now that our documents can be “500” tokens long to fit our `template_prompt` still correctly. In addition to our input, we need to understand better our “target” sequence length meaning and how long are the summarization ins our dataset. Therefore we iterate over the dataset and calculate the max input length (at max 500) and the max target length. (takes a few minutes)"
+    "现在我们知道，模型支持的最大输入文档长度为 500。除了输入之外，我们还需要知道最大“目标”序列长度，我们可以通过遍历数据集中的摘要长度来得到。(代码需要运行几分钟)"
    ]
   },
   {
@@ -247,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have everything needed to process our dataset."
+    "现在一切准备就绪，可以处理数据集了。"
    ]
   },
   {
@@ -291,25 +293,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-tune model using `deepspeed`\n",
+    "## 使用 `deepspeed` 微调模型\n",
     "\n",
-    "Done! We can now start training our model! We learned in the introduction that we would leverage the DeepSpeed integration with the Hugging Face Trainer. Therefore we need to create a `deespeed_config.json`. In the [DeepSpeed Configuration,](https://www.deepspeed.ai/docs/config-json/) we define the ZeRO strategy we want to use and if we want to use mixed precision training. The Hugging Face Trainer allows us to inherit values from the `TrainingArguments` in our `deepspeed_config.json` to avoid duplicate values, check the [documentation for more information.](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed#configuration)\n",
+    "准备完毕！我们现在可以开始训练模型了！如前所述，我们将使用集成了 DeepSpeed 的 Hugging Face Trainer。因此我们需要创建一个 `deespeed_config.json`。[DeepSpeed 配置](https://www.deepspeed.ai/docs/config-json/) 定义了要使用的 ZeRO 策略以及是否要使用混合精度训练等配置项。 Hugging Face Trainer 允许我们从 `deepspeed_config.json` 中的 `TrainingArguments` 继承相关配置以避免重复设置，查看 [文档了解更多信息](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed#configuration)。\n",
     "\n",
-    "We created 4 deepspeed configurations for the experiments we ran, including `CPU offloading` and `mixed precision`: \n",
+    "我们创建了 4 组 deepspeed 配置文件用于实验，包括 `CPU 卸载` 和 `混合精度`:\n",
     "\n",
-    "- [ds_flan_t5_z3_config.json](./configs/ds_flan_t5_z3_config.json)\n",
-    "- [ds_flan_t5_z3_config_bf16.json](./configs/ds_flan_t5_z3_config_bf16.json)\n",
-    "- [ds_flan_t5_z3_offload.json](./configs/ds_flan_t5_z3_offload.json)\n",
-    "- [ds_flan_t5_z3_offload_bf16.json](./configs/ds_flan_t5_z3_offload_bf16.json)\n",
+    "- [ds_flan_t5_z3_config.json](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/configs/ds_flan_t5_z3_config.json)\n",
+    "- [ds_flan_t5_z3_config_bf16.json](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/configs/ds_flan_t5_z3_config_bf16.json)\n",
+    "- [ds_flan_t5_z3_offload.json](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/configs/ds_flan_t5_z3_offload.json)\n",
+    "- [ds_flan_t5_z3_offload_bf16.json](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/configs/ds_flan_t5_z3_offload_bf16.json)\n",
     "\n",
-    "Depending on your setup, you can use those, e.g. if you are running on NVIDIA V100s, you have to use the config without `bf16` since V100 are not support `bfloat16` types. \n",
+    "你可以根据你的运行环境选择，例如如果在 NVIDIA V100s 上运行，你就不能使用带 `bf16` 的配置，因为 V100 不支持 `bfloat16` 数据类型。\n",
     "\n",
-    "> When fine-tuning `T5` models we cannot use `fp16` since it leads to overflow issues, see: [#4586](https://github.com/huggingface/transformers/issues/4586), [#10830](https://github.com/huggingface/transformers/issues/10830), [#10956](https://github.com/huggingface/transformers/pull/10956)\n",
-    "> \n",
+    "> 在微调 `T5` 模型时，不能使用 `fp16`，因为它会导致精度溢出问题，参见问题  [#4586](https://github.com/huggingface/transformers/issues/4586)，[#10830](https://github.com/huggingface/transformers/issues/10830)，和拉取请求 [#10956](https://github.com/huggingface/transformers/pull/10956)\n",
     "\n",
-    "As mentioned in the beginning, we are using a p4dn.24xlarge AWS EC2 Instance including 8x NVIDIA A100 40GB. This means we can leverage `bf16`, which reduces the memory footprint of the model by almost ~2x, which allows us to train without offloading efficiently. \n",
+    "如开头所述，我们使用的是 p4dn.24xlarge AWS EC2 实例，该实例包含 8 张显存为 40GB 的 NVIDIA A100。这意味着我们可以使用 `bf16`，它将减少近一半的模型显存占用，使我们能够在不卸载的情况下高效训练。\n",
     "\n",
-    "We are going to use the [ds_flan_t5_z3_config_bf16.json](./configs/ds_flan_t5_z3_config_bf16.json). If you are irritated by the `auto` values, check the [documentation](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed#configuration)."
+    "我们将使用 [ds_flan_t5_z3_config_bf16.json](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/configs/ds_flan_t5_z3_config_bf16.json)。如果你不想用 `auto` 值，可以查看 [文档](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed#configuration)。\n",
+    "\n",
+    "现在，该训练脚本上场了。我们根据 [Fine Tune FLAN-T5](https://www.philschmid.de/fine-tune-flan-t5) 准备了一个 [run_seq2seq_deepspeed.py](https://github.com/philschmid/deep-learning-pytorch-huggingface/blob/main/training/scripts/run_seq2seq_deepspeed.py) 训练脚本，它支持我们配置 deepspeed 和其他超参数，包括 `google/flan-t5-xxl` 的模型 ID。\n",
+    "\n",
+    "我们使用 `deepspeed` 启动器触发训练，输入给启动器的参数包括 GPU 数量、deepspeed 配置及其它超参数 (如 `google/flan-t5-xxl` 的模型 ID)。"
    ]
   },
   {
@@ -346,24 +351,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results\n",
+    "DeepSpeed 会先将模型加载到 CPU 上，然后将其拆分到 8 张 A100 上然后开始训练。使用 [CNN Dailymail 数据集](https://huggingface.co/datasets/cnn_dailymail) 进行训练大约需要 10 个小时，费用约为 `322 美元`。"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 结果与实验\n",
     "\n",
-    "dataset: `\"cnn_dailymail\"`\n",
-    "-  training examples: `287113`\n",
-    "-  validation examples: `13368`\n",
+    "为了更好地了解硬件要求，我们对 FLAN-T5 XL 和 XXL 进行了一系列实验，以帮助我们评估和了解硬件需求以及训练这些模型的成本。\n",
     "\n",
-    "hyperparamters:\n",
+    "下表列出了实验和相关设置的详细信息。\n",
+    "\n",
+    "数据集: `\"cnn_dailymail\"`\n",
+    "- 训练样本数: `287113`\n",
+    "- 验证样本数: `13368`\n",
+    "\n",
+    "超参:\n",
     "- epochs: `3`\n",
-    "- learning rate: `1e-4`\n",
+    "- 学习率: `1e-4`\n",
     "\n",
-    "setups: \n",
+    "运行环境设置:\n",
     "- 4x V100 16GB: p3.8xlarge\n",
     "- 4x A10G 24GB: g5.24xlarge\n",
     "- 8x V100 16GB: p3.16xlarge\n",
     "- 8x A100 40GB: p4dn.24xlarge\n",
     "\n",
-    "\n",
-    "| Model             | DS offload | Hardware     | batch size per GPU | precision | duration | cost   |\n",
+    "| 模型              | DeepSpeed 卸载 | 硬件       | GPU每卡batch size   | 精度       | 时长     | 费用    |\n",
     "|-------------------|------------|--------------|--------------------|-----------|----------|--------|\n",
     "| FLAN-T5-XL (3B)   | No         | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XL (3B)   | No         | 8x V100 16GB | 1                  | fp32      | 105h     | ~$2570 |\n",
@@ -378,9 +394,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "我们可以看到 `bf16` 与  `fp32` 相比具有显著优势。FLAN-T5-XXL 能放进 4 张 A10G (24GB)，但放不进 8 张 V100 16GB。\n",
+    "\n",
+    "我们的实验还表明，如果模型可以无需卸载同时以 batch size 大于 4 的配置跑在 GPU 上，其速度将比卸载模型和减小 batch size 的配置快约 2 倍且更具成本效益。"
+   ]
   }
  ],
  "metadata": {
