--- a/hackerllama/2024-01-07-Sentence Embeddings.ipynb
+++ b/hackerllama/2024-01-07-Sentence Embeddings.ipynb
@@ -40,7 +40,7 @@
         "这个系列旨在揭示嵌入（embeddings）的奥秘，并向您展示如何在项目中使用它们。本系列的第一篇博客将教您如何使用和扩展开源嵌入模型。我们将探讨选择现有模型的标准、当前的评估方法以及生态系统的现状。我们还将深入研究三个令人兴奋的应用领域：:\n",
         "\n",
         "\n",
-        "* 寻找最相似的Quora或StackOverflow问题\n",
+        "* 寻找最相似的Quora或StackOverflow问题（注：Quora为美国一个著名的问答网站，Stack Overflow是一个美国的程序员问答网站）\n",
         "* 在给定的大型数据集中，找到最相似的项\n",
         "* 在用户浏览器中直接运行搜索嵌入模型（无需服务器）\n",
         "\n",
@@ -53,19 +53,19 @@
         "id": "VZW89x_3GRSf"
       },
       "source": [
-        "## The TL;DR\n",
+        "## 摘要\n",
         "\n",
-        "You keep reading about \"embeddings this\" and \"embeddings that\", but you might still not know exactly what they are. You are not alone! Even if you have a vague idea of what embeddings are, you might use them through a black-box API without really understanding what’s going on under the hood. This is a problem because the current state of open-source embedding models is very strong - they are pretty easy to deploy, small (and hence cheap to host), and outperform many closed-source models.\n",
+        "也许你一直在阅读关于“嵌入这个”和“嵌入那个”的内容，但你可能仍然不完全了解嵌入究竟是什么。你并不孤单！即使你对嵌入只有一个模糊的概念，你仍可通过一个黑匣子 API（注：因为训练的模型，我们并不知道模型工作时内部信息传递方式是如何的，因此称作黑盒）去使用模型，而你并不知道模型内部发生了什么。这是一个问题，因为当前开源嵌入模型的性能非常强大-它们容易不但容易部署，而且体积小（因此托管成本较低），并且胜过许多闭源模型。\n",
         "\n",
-        "An embedding represents information as a vector of numbers (think of it as a list!). For example, we can obtain the embedding of a word, a sentence, a document, an image, an audio file, etc. Given the sentence “Today is a sunny day”, we can obtain its embedding, which would be a vector of a specific size, such as 384 numbers (such vector could look like [0.32, 0.42, 0.15, …, 0.72]). What is interesting is that the **embeddings capture the semantic meaning of the information**. For example, embedding the sentence “Today is a sunny day” will be very similar to that of the sentence “The weather is nice today”. Even if the words are different, the meaning is similar, and the embeddings will reflect that.\n",
+        "嵌入表示信息为一组数字的向量（可以将其视为列表！）。例如，我们可以获得单词、句子、文档、图像、音频文件等的嵌入。给定句子“今天是个晴天”，我们可以获得其嵌入，它将是一个特定大小的向量，例如384个数字（这样的向量可能看起来像 [0.32, 0.42, 0.15, …, 0.72]）。有趣的是，**嵌入捕捉到了信息的语义含义**。例如，嵌入句子“今天是个晴天”将与句子“今天天气不错”非常相似。即使单词不同，含义相似，嵌入也会反映这一点。\n",
         "\n",
         ":::callout\n",
         "\n",
-        "If you’re not sure what words such as “vector”, “semantic similarity”, the vector size, or “pretrained” mean, don’t worry! We’ll explain them in the following sections. Focus on the high-level understanding first.\n",
+        "如果你不确定诸如“向量”、“语义相似性”、“向量大小”或“预训练”等术语的含义，不用担心！我们将在接下来的部分对它们进行解释。首先专注于浅层次的理解。\n",
         "\n",
         ":::\n",
         "\n",
-        "So, this vector captures the semantic meaning of the information, making it easier to compare to each other. For example, we can use embeddings to find similar questions in Quora or StackOverflow, search code, find similar images, etc. Let’s look into some code!"
+        "因此，这个向量捕捉到了信息的语义含义，使得它们更容易相互比较。例如，我们可以使用嵌入来在Quora或StackOverflow中找到相似的问题，搜索代码，找到相似的图像等。让我们深入了解一些代码！"
       ]
     },
     {
