--- a/hackerllama/2024-01-07-Sentence Embeddings.ipynb
+++ b/hackerllama/2024-01-07-Sentence Embeddings.ipynb
@@ -18,7 +18,7 @@
         "    comments:\n",
         "      utterances:\n",
         "         repo: osanseviero/hackerllama\n",
-        "译者：jim (肖君枫)\n",
+        "译者：tom (肖君枫)\n",
         "---"
       ]
     },
@@ -57,11 +57,11 @@
         "\n",
         "也许你一直在阅读关于“嵌入这个”和“嵌入那个”的内容，但你可能仍然不完全了解嵌入究竟是什么。你并不孤单！即使你对嵌入只有一个模糊的概念，你仍可通过一个黑匣子 API（注：因为训练的模型，我们并不知道模型工作时内部信息传递方式是如何的，因此称作黑盒）去使用模型，而你并不知道模型内部发生了什么。这是一个问题，因为当前开源嵌入模型的性能非常强大-它们容易不但容易部署，而且体积小（因此托管成本较低），并且胜过许多闭源模型。\n",
         "\n",
-        "嵌入表示信息为一组数字的向量（可以将其视为列表！）。例如，我们可以获得单词、句子、文档、图像、音频文件等的嵌入。给定句子“今天是个晴天”，我们可以获得其嵌入，它将是一个特定大小的向量，例如384个数字（这样的向量可能看起来像 [0.32, 0.42, 0.15, …, 0.72]）。有趣的是，嵌入捕捉到了信息的语义含义。例如，嵌入句子“今天是个晴天”将与句子“今天天气不错”非常相似。即使单词不同，含义相似，嵌入也会反映这一点。\n",
+        "嵌入表示信息为一组数字的向量（可以将其视为列表！）。例如，我们可以获得单词、句子、文档、图像、音频文件等的嵌入。给定句子“今天是个晴天”，我们可以获得其嵌入，它将是一个特定大小的向量，例如384个数字（这样的向量可能看起来像 [0.32, 0.42, 0.15, …, 0.72]）。有趣的是，嵌入捕捉到了信息的语义含义。例如，嵌入句子“今天是个晴天”将与句子“今天天气不错”非常相似。即使单词不同，含义相似，嵌入也会反映出这一点。\n",
         "\n",
         ":::callout\n",
         "\n",
-        "如果你不确定诸如“向量”、“语义相似性”、“向量大小”或“预训练”等术语的含义，不用担心！我们将在接下来的部分对它们进行逐一解释。为我们首先要先专注于浅层次的理解。\n",
+        "如果你不确定诸如“向量”、“语义相似性”、“向量大小”或“预训练”等术语的含义，不用担心！我们将在接下来的部分对它们进行逐一解释。我们首先要先专注于浅层次的理解。\n",
         "\n",
         ":::\n",
         "\n",
@@ -74,7 +74,7 @@
         "id": "1diSV7DtGRSf"
       },
       "source": [
-        "We’ll use Sentence Transformers, an open-source library that makes it easy to use pre-trained embedding models. In particular, ST allows us to turn sentences into embeddings quickly. Let’s run an example and then discuss how it works under the hood.\n",
+        "我们将使用Sentence Transformers，这是一个开源库，它使得使用预训练嵌入模型变得非常简单。具体来说，Sentence Transformers允许我们快速将句子转换为嵌入。让我们运行一个例子，然后讨论它在幕后是如何工作的。\n",
         "\n",
         "Let's begin by installing the library:"
       ]
