--- a/hackerllama/2024-01-12-The Llama Hitchiking Guide to Local LLMs.qmd
+++ b/hackerllama/2024-01-12-The Llama Hitchiking Guide to Local LLMs.qmd
@@ -2,7 +2,7 @@
 date: "01/12/2024"
 toc: false
 twitter-card: true
-title: The Llama Hitchiking Guide to Local LLMs
+title: The Llama Hitchiking Guide to Local LLMs大模型社区Llama便利指南
 format:
   html:
     comments:
@@ -10,13 +10,13 @@ format:
          repo: osanseviero/hackerllama
 ---
 
-Here are some terms that are useful to know when joining the Local LLM community.
+以下是一些在大模型社区里有可能用到的术语。
 
-1. **LocalLlama:** A [Reddit community](https://www.reddit.com/r/LocalLLaMA/) of practitioners, researchers, and hackers doing all kinds of crazy things with ML models.
+1. **LocalLlama:** 一个由从业者、研究人员和黑客组成的 [Reddit 社区](https://www.reddit.com/r/LocalLLaMA/)，他们使用机器学习模型进行各种疯狂的实践。
 
     ![](localllama.jpeg)
 
-2. **LLM:** A Large Language Model. Usually a transformer-based model with a lot of parameters...billions or even trillions.
+2. **LLM:** 大语言模型. Usually a transformer-based model with a lot of parameters...billions or even trillions.
 
 3. **Transformer:** A type of neural network architecture that is very good at language tasks. It is the basis for most LLMs.
 
