--- a/hackerllama/2024-01-07-Sentence Embeddings.ipynb
+++ b/hackerllama/2024-01-07-Sentence Embeddings.ipynb
@@ -74,9 +74,9 @@
         "id": "1diSV7DtGRSf"
       },
       "source": [
-        "我们将使用Sentence Transformers，这是一个开源库，它使得使用预训练嵌入模型变得非常简单。具体来说，Sentence Transformers允许我们快速将句子转换为嵌入。让我们运行一个例子，然后讨论它在幕后是如何工作的。\n",
+        "我们将使用Sentence Transformers，这是一个开源的第三方python库，它使得使用预训练嵌入模型变得非常简单。具体来说，Sentence Transformers允许我们快速将句子由自然语言转换为嵌入。让我们运行一个例子，然后讨论它在幕后是如何工作的。\n",
         "\n",
-        "Let's begin by installing the library:"
+        "让我们开始安装这个库："
       ]
     },
     {
@@ -100,7 +100,7 @@
         "id": "px-H9e9bGRSg"
       },
       "source": [
-        "The second step is to load an existing model. We'll start using [all-MiniLM-L6-v2](https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2). It's not the best open-source embedding model, but it's quite popular and very small (23 million parameters), which means we can get started with it very quickly."
+        "第二步是加载一个已存在的模型。我们将开始使用 [all-MiniLM-L6-v2](https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2)。虽然它不是最好的开源嵌入模型，但它相当受用户欢迎且参数量非常小（2300万参数），这意味着我们可以非常快速地开始使用它。"
       ]
     },
     {
@@ -125,7 +125,7 @@
         "id": "tyznQwIuGRSh"
       },
       "source": [
-        "Now that we loaded a model, let's use it to encode some sentences. We can use the `encode` method to obtain the embeddings of a list of sentences. Let's try it out!"
+        "既然我们已经加载了一个模型，让我们使用它来对一些句子进行编码。我们可以使用`encode`方法来获得一个句子列表的嵌入。让我们试一试吧！"
       ]
     },
     {
