fix: fix some mistakes

--- a/hackerllama/sentence_embedding2/index.ipynb
+++ b/hackerllama/sentence_embedding2/index.ipynb
@@ -918,11 +918,11 @@
    "source": [
     "## 补充: 增强 SBERT\n",
     "\n",
-    "[增强 SBERT](https://arxiv.org/abs/2010.08240) 是一种用于收集数据以改善双编码器的方法。预训练和微调双编码器需要大量的数据，因此作者建议使用跨编码器来标记大量输入对的集合，并将其添加到训练数据中。例如，如果你有非常少的标记数据，你可以训练一个跨编码器，然后标记未标记的对，这可以用来训练一个双编码器。\n",
-    "你是如何生成对的？我们可以使用句子的随机组合，然后使用跨编码器对它们进行标记。这将导致大多数是负对，并倾斜标签分布。为了避免这种情况，作者探索了不同的技术：\n",
+    "[增强 SBERT](https://arxiv.org/abs/2010.08240) 是一种用于收集数据以改善双向编码器的方法。预训练和微调双向编码器需要大量的数据，因此作者建议使用交叉编码器来标记大量输入对的集合，并将其添加到训练数据中。例如，如果你有非常少的标记数据，你可以训练一个交叉编码器，然后标记未标记的对，这可以用来训练一个双向编码器。\n",
+    "你是如何生成对的？我们可以使用句子的随机组合，然后使用交叉编码器对它们进行标记。这将导致大多数是负对，并倾斜标签分布。为了避免这种情况，作者探索了不同的技术：\n",
     "* 使用 **核密度估计（KDE）**，目标是让小型的金数据集和增强数据集之间有类似的标签分布。这是通过放弃一些负对来实现的。当然，这将效率低下，因为你需要生成很多对才能得到几个正对。\n",
-    "* **BM25** 是一种基于重叠的搜索引擎算法（例如，词频、文档长度等）。基于此，作者获取最相似的句子来检索最相似的 k 个句子，然后使用跨编码器对它们进行标记。这是高效的，但只有在句子之间重叠很少时才能捕捉到语义相似性。\n",
-    "* **语义搜索采样** 在金数据上训练双编码器，然后用来采样其他相似的对。\n",
+    "* **BM25** 是一种基于重叠的搜索引擎算法（例如，词频、文档长度等）。基于此，作者获取最相似的句子来检索最相似的 k 个句子，然后使用交叉编码器对它们进行标记。这是高效的，但只有在句子之间重叠很少时才能捕捉到语义相似性。\n",
+    "* **语义搜索采样** 在金数据上训练双向编码器，然后用来采样其他相似的对。\n",
     "* **BM25 + 语义搜索采样** 结合了前两种方法。这有助于找到词汇和语义上相似的句子。\n",
     "在 [Sentence Transformers 文档](https://www.sbert.net/examples/training/data_augmentation/README.html)中有很好的图表和示例脚本来做这件事。\n",
     "![增强 SBERT - 图片来自原论文](augmented.png)\n"
@@ -935,7 +935,7 @@
     "## 总结\n",
     "\n",
     "\n",
-    "好了，我们刚才学会了怎么做一件很酷的事情：检索和重新排序，这是句子嵌入的一个非常常见的任务。我们了解了双编码器和跨编码器有什么不同，以及什么时候该用哪一个。还学到了一些提升双编码器性能的技巧，比如增强 SBERT。\n",
+    "好了，我们刚才学会了怎么做一件很酷的事情：检索和重新排序，这是句子嵌入的一个非常常见的任务。我们了解了双向编码器和交叉编码器有什么不同，以及什么时候该用哪一个。还学到了一些提升双向编码器性能的技巧，比如增强 SBERT。\n",
     "\n",
     "别担心，代码可以随便改，随便玩！如果你觉得这篇博客不错，给个[赞或者分享](https://github.com/osanseviero/hackerllama)一下吧，这对我来说是个很大的鼓励！"
    ]
@@ -945,10 +945,10 @@
    "metadata": {},
    "source": [
     "## 知识检查\n",
-    "1. 双编码器和跨编码器之间有什么区别？\n",
+    "1. 双向编码器和交叉编码器之间有什么区别？\n",
     "2. 解释重新排序的不同步骤。\n",
-    "3. 如果使用双编码器比较 30,000 个句子，我们需要生成多少个嵌入？使用跨编码器进行推理需要运行多少次？\n",
-    "4. 有哪些技术可以改善双编码器？\n",
+    "3. 如果使用双向编码器比较 30,000 个句子，我们需要生成多少个嵌入？使用交叉编码器进行推理需要运行多少次？\n",
+    "4. 有哪些技术可以改善双向编码器？\n",
     "\n",
     "现在，你已经有了实现你的搜索系统的坚实基础。作为一个后续任务，我建议使用不同的数据集实现一个类似的检索和重新排序系统。探索改变检索和重新排序模型对结果的影响。\n"
    ]
