Update: philschmid/2023-07-26-instruction-tune-llama-2_CN.ipynb

--- a/philschmid/2023-07-26-instruction-tune-llama-2_CN.ipynb
+++ b/philschmid/2023-07-26-instruction-tune-llama-2_CN.ipynb
@@ -4,25 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 扩展说明：指令微调Llama 2\n",
+    "# 扩展说明: 指令微调 Llama 2\n",
     "\n",
-    "这篇博客是一篇来自Meta AI，关于指令微调Llama 2的扩展说明。旨在聚焦构建指令数据集，有了它，我们则可以使用自己的指令来微调Llama 2基础模型。\n",
+    "这篇博客是一篇来自 Meta AI，关于指令微调 Llama 2 的扩展说明。旨在聚焦构建指令数据集，有了它，我们则可以使用自己的指令来微调 Llama 2 基础模型。\n",
     "\n",
     "目标是构建一个能够基于输入内容来生成指令的模型。这么做背后的逻辑是，模型如此就可以由其他人生成自己的指令数据集。这在当想开发私人个性化定制模型，如发送推特、写邮件等，时很方便。这也意味着你可以通过你的邮件来生成一个指令数据集，然后用它来训练一个模型来为你写邮件。\n",
     "\n",
-    "好，那我们来开始吧？我们将进行：\n",
+    "好，那我们来开始吧？我们将进行:\n",
     "\n",
     "1. 定义应用场景细节并创建指令的提示词模板\n",
     "2. 构建指令数据集\n",
-    "3. 使用 `trl` 与 `SFTTrainer` 指令微调Llama 2\n",
+    "3. 使用 `trl` 与 `SFTTrainer` 指令微调 Llama 2\n",
     "4. 测试模型、进行推理\n",
     "\n",
     "## 1. 定义应用场景细节并创建指令的提示词模板\n",
     "\n",
     "在描述应用场景前，我们要更好的理解一下究竟什么是指令。\n",
     "\n",
-    ">指令是一段文本或提供给大语言模型，类似Llama，GPT-4或Claude，使用的提示词，用来指导它去生成回复。指令可以让人们做到把控对话，约束模型输出更自然、实用的输出，并使这些结果能够对齐用户的目的。制作清晰的、整洁的指令则是生成高质量对话的关键。\n",
-    ">\n",
+    "> 指令是一段文本或提供给大语言模型，类似 Llama，GPT-4 或 Claude，使用的提示词，用来指导它去生成回复。指令可以让人们做到把控对话，约束模型输出更自然、实用的输出，并使这些结果能够对齐用户的目的。制作清晰的、整洁的指令则是生成高质量对话的关键。\n",
     "\n",
     "指令的例子如下表所示。\n",
     "\n",
@@ -34,47 +33,49 @@
     "| 生成 | 用罗伯特·弗罗斯特的风格写一首关于大自然和季节变化的诗。 |\n",
     "| 信息提取 | 从这篇短文中提取主要人物的名字。 |\n",
     "| 开放性问答 | 为什么树叶在秋天会变色？用科学的理由解释一下。 |\n",
-    "| 摘要 | 用2-3句话概括一下这篇关于可再生能源最新进展的文章。 |\n",
+    "| 摘要 | 用 2-3 句话概括一下这篇关于可再生能源最新进展的文章。 |\n",
     "\n",
-    "如开头所述，我们想要微调模型，以便根据输入（或输出）生成指令。 我们希望将其用作创建合成数据集的方法，以赋予LLM和代理个性化能力。\n",
+    "如开头所述，我们想要微调模型，以便根据输入 (或输出) 生成指令。 我们希望将其用作创建合成数据集的方法，以赋予 LLM 和代理个性化能力。\n",
     "\n",
-    "把这个想法转换成一个基础的提示模板，按照[Alpaca格式](https://github.com/tatsu-lab/stanford_alpaca#data-release).\n",
-    "\n",
+    "把这个想法转换成一个基础的提示模板，按照 [Alpaca 格式](https://github.com/tatsu-lab/stanford_alpaca#data-release).\n",
     "\n",
     "```python\n",
-    "### 指令:\n",
-    "使用下面的输入创建一条指令，该指令可以使用LLM生成输入文本。\n",
+    "### Instruction:\n",
+    "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
     "\n",
-    "### 输入文本:\n",
-    "亲爱的 [领导名字]，\n",
-    "此封信件是想申请我下周一到周四的带薪假期。\n",
+    "### Input:\n",
+    "Dear [boss name],\n",
     "\n",
-    "下周我有一些私人事务要处理，不得不离开办公\n",
-    "室。我想尽提前地通知您，这样您就可以在我离\n",
-    "开期间做好相应的安排。\n",
+    "I'm writing to request next week, August 1st through August 4th,\n",
+    "off as paid time off.\n",
     "\n",
-    "如果您需要任何其他信息，或者对我下周休假有\n",
-    "任何疑问，请联系我。谢谢您对此的受理。\n",
+    "I have some personal matters to attend to that week that require \n",
+    "me to be out of the office. I wanted to give you as much advance \n",
+    "notice as possible so you can plan accordingly while I am away.\n",
     "\n",
-    "谢谢，[你的名字]\n",
+    "Please let me know if you need any additional information from me \n",
+    "or have any concerns with me taking next week off. I appreciate you \n",
+    "considering this request.\n",
     "\n",
-    "### 回复:\n",
-    "给我的领导写封邮件，说我下周8月1日到8月4日需要请假。\n",
+    "Thank you, [Your name]\n",
+    "\n",
+    "### Response:\n",
+    "Write an email to my boss that I need next week 08/01 - 08/04 off.\n",
     "```\n",
     "\n",
     "## 2. 创建指令数据集\n",
     "\n",
-    "在定义了我们的应用场景和提示模板后，我们需要创建自己的指令数据集。创建高质量的指令数据集是获得良好模型性能的关键。研究表明，[“对齐，越少越好”](https://arxiv.org/abs/2305.11206)表明，创建高质量、低数量(大约1000个样本)的数据集可以达到与低质量、高数量的数据集相同的性能。\n",
+    "在定义了我们的应用场景和提示模板后，我们需要创建自己的指令数据集。创建高质量的指令数据集是获得良好模型性能的关键。研究表明，[“对齐，越少越好”](https://arxiv.org/abs/2305.11206) 表明，创建高质量、低数量 (大约 1000 个样本) 的数据集可以达到与低质量、高数量的数据集相同的性能。\n",
     "\n",
     "创建指令数据集有几种方法，包括:\n",
     "\n",
-    "1. 使用现有数据集并将其转换为指令数据集，例如[FLAN](https://huggingface.co/datasets/SirNeural/flan_v2)\n",
-    "2. 使用现有的LLM创建合成指令数据集，例如[Alpaca](https://huggingface.co/datasets/tatsu-lab/alpaca)\n",
-    "3. 人力创建指令数据集，例如[Dolly](https://huggingface.co/datasets/databricks/databricks-dolly-15k)。\n",
+    "1. 使用现有数据集并将其转换为指令数据集，例如 [FLAN](https://huggingface.co/datasets/SirNeural/flan_v2)\n",
+    "2. 使用现有的 LLM 创建合成指令数据集，例如 [Alpaca](https://huggingface.co/datasets/tatsu-lab/alpaca)\n",
+    "3. 人力创建指令数据集，例如 [Dolly](https://huggingface.co/datasets/databricks/databricks-dolly-15k)。\n",
     "\n",
-    "每种方法都有其优缺点，这取决于预算、时间和质量要求。例如，使用现有数据集是最简单的，但可能不适合您的特定用例，而使用人力可能是最准确的，但必然耗时、昂贵。也可以结合几种不同方法来创建指令数据集，如[Orca: Progressive Learning from Complex Explanation Traces of GPT-4.](https://arxiv.org/abs/2306.02707)。\n",
+    "每种方法都有其优缺点，这取决于预算、时间和质量要求。例如，使用现有数据集是最简单的，但可能不适合您的特定用例，而使用人力可能是最准确的，但必然耗时、昂贵。也可以结合几种不同方法来创建指令数据集，如 [Orca: Progressive Learning from Complex Explanation Traces of GPT-4.](https://arxiv.org/abs/2306.02707)。\n",
     "\n",
-    "为了简单起见，我们将使用 **[Dolly](https://huggingface.co/datasets/databricks/databricks-dolly-15k)** ，这是一个开源的指令跟踪记录数据集，由数千名Databricks员工在 **[InstructGPT paper](https://arxiv.org/abs/2203.02155)** 中描述的几个行为类别中生成，包括头脑风暴、分类、确定性回答、生成、信息提取、开放性回答和摘要。\n",
+    "为了简单起见，我们将使用 **[Dolly](https://huggingface.co/datasets/databricks/databricks-dolly-15k)**，这是一个开源的指令跟踪记录数据集，由数千名 Databricks 员工在 **[InstructGPT paper](https://arxiv.org/abs/2203.02155)** 中描述的几个行为类别中生成，包括头脑风暴、分类、确定性回答、生成、信息提取、开放性回答和摘要。\n",
     "\n",
     "开始编程吧，首先，我们来安装依赖项。"
    ]
@@ -92,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "加载 **`databricks/databricks-dolly-15k`** 数据集，我们使用 🤗 Datasets library的 **`load_dataset()`** 方法。"
+    "我们使用 🤗 Datasets library 的 **`load_dataset()`** 方法加载 **`databricks/databricks-dolly-15k`** 数据集。"
    ]
   },
   {
@@ -159,21 +160,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.使用`trl`和`SFTTrainer` 指令微调Llama 2\n",
-    "我们将使用最近在由Tim Dettmers等人的发表的论文“[QLoRA: Quantization-aware Low-Rank Adapter Tuning for Language Generation](https://arxiv.org/abs/2305.14314)”中介绍的方法。QLoRA是一种新的技术，用于在微调期间减少大型语言模型的内存占用，且并不会降低性能。QLoRA的TL;DR;是这样工作的：\n",
+    "## 3. 使用 `trl` 和`SFTTrainer` 指令微调 Llama 2\n",
     "\n",
-    "- 将预训练模型量化为4bit位并冻结它。\n",
-    "- 附加轻量化的、可训练的适配器层。（LoRA）\n",
+    "我们将使用最近在由 Tim Dettmers 等人的发表的论文“[QLoRA: Quantization-aware Low-Rank Adapter Tuning for Language Generation](https://arxiv.org/abs/2305.14314)”中介绍的方法。QLoRA 是一种新的技术，用于在微调期间减少大型语言模型的内存占用，且并不会降低性能。QLoRA 的 TL;DR; 是这样工作的:\n",
+    "\n",
+    "- 将预训练模型量化为 4bit 位并冻结它。\n",
+    "- 附加轻量化的、可训练的适配器层。(LoRA)\n",
     "- 在使用冻结的量化模型基于文本内容进行微调时，仅微调适配器层参数。\n",
     "\n",
-    "如果您想了解有关QLoRA及其工作原理的更多信息，我建议您阅读 **[Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA](https://huggingface.co/blog/4bit-transformers-bitsandbytes)** 博客文章。\n",
+    "如果您想了解有关 QLoRA 及其工作原理的更多信息，我建议您阅读 **[Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA](https://huggingface.co/blog/4bit-transformers-bitsandbytes)** 博客文章。\n",
     "\n",
-    "### Flash Attention（快速注意力）\n",
+    "### Flash Attention (快速注意力)\n",
     "\n",
-    "Flash Attention是一种经过重新排序的注意力计算方法，它利用经典技术（排列、重计算）来显著加快速度，将序列长度的内存使用量从二次降低到线性。它基于论文“[FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness](https://arxiv.org/abs/2205.14135)”。\n",
-    "TL;DR; 将训练加速了3倍。在这儿获得更多信息 [FlashAttention](https://github.com/Dao-AILab/flash-attention/tree/main)。 Flash Attention 目前仅支持 Ampere (A10, A40, A100, ...) & Hopper (H100, ...) GPU。 你可以检查一下你的GPU是否支持，并用下面的命令来安装它：\n",
+    "Flash Attention 是一种经过重新排序的注意力计算方法，它利用经典技术 (排列、重计算) 来显著加快速度，将序列长度的内存使用量从二次降低到线性。它基于论文“[FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness](https://arxiv.org/abs/2205.14135)”。\n",
     "\n",
-    "注意：如果您的机器的内存小于96GB，而CPU核心数足够多，请减少`MAX_JOBS`的数量。在我们使用的`g5.2xlarge`上，我们使用了`4`。\n",
+    "TL;DR; 将训练加速了 3 倍。在这儿获得更多信息 [FlashAttention](https://github.com/Dao-AILab/flash-attention/tree/main)。 Flash Attention 目前仅支持 Ampere (A10, A40, A100, …) & Hopper (H100, …) GPU。 你可以检查一下你的 GPU 是否支持，并用下面的命令来安装它:\n",
+    "\n",
+    "注意: 如果您的机器的内存小于 96GB，而 CPU 核心数足够多，请减少 `MAX_JOBS` 的数量。在我们使用的 `g5.2xlarge` 上，我们使用了 `4` 。\n",
     "\n",
     "```bash\n",
     "python -c \"import torch; assert torch.cuda.get_device_capability()[0] >= 8, 'Hardware not supported for Flash Attention'\"\n",
@@ -181,9 +184,9 @@
     "MAX_JOBS=4 pip install flash-attn --no-build-isolation\n",
     "```\n",
     "\n",
-    "_安装 flash attention 是会需要一些时间 (10-45 分钟)._\n",
+    "_安装 flash attention 是会需要一些时间 (10-45 分钟)_。\n",
     "\n",
-    "该示例支持对所有Llama检查点使用Flash Attention，但默认是未启用的。要开启Flash Attention，请取消代码块中这段的注释，`# COMMENT IN TO USE FLASH ATTENTION`。\n"
+    "该示例支持对所有 Llama 检查点使用 Flash Attention，但默认是未启用的。要开启 Flash Attention，请取消代码块中这段的注释， `# COMMENT IN TO USE FLASH ATTENTION` 。"
    ]
   },
   {
@@ -268,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在开始训练之前，我们需要定义自己想要的超参数（`TrainingArguments`）。"
+    "在开始训练之前，我们需要定义自己想要的超参数 (`TrainingArguments`)。"
    ]
   },
   {
@@ -302,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们现在有了用来训练模型--`SFTTrainer`所需要准备的每一个模块。"
+    "我们现在有了用来训练模型 `SFTTrainer` 所需要准备的每一个模块。"
    ]
   },
   {
@@ -331,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "通过调用`Trainer` 实例上的 `train()`方法来训练我们的模型。"
+    "通过调用 `Trainer` 实例上的 `train()` 方法来训练我们的模型。"
    ]
   },
   {
@@ -351,10 +354,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "不使用Flash Attention的训练过程在`g5.2xlarge`上花费了03:08:00。实例的成本为`1,212$/h`，总成本为`3.7$`。\n",
-    "使用Flash Attention的训练过程在`g5.2xlarge`上花费了02:08:00。实例的成本为`1,212$/h`，总成本为`2.6$`。\n",
+    "不使用 Flash Attention 的训练过程在 `g5.2xlarge` 上花费了 03:08:00。实例的成本为 `1,212$/h` ，总成本为 `3.7$` 。\n",
     "\n",
-    "使用Flash Attention的结果令人满意，速度提高了1.5倍，成本降低了30%。"
+    "使用 Flash Attention 的训练过程在 `g5.2xlarge` 上花费了 02:08:00。实例的成本为 `1,212$/h` ，总成本为 `2.6$` 。\n",
+    "\n",
+    "使用 Flash Attention 的结果令人满意，速度提高了 1.5 倍，成本降低了 30%。"
    ]
   },
   {
@@ -363,7 +367,7 @@
    "source": [
     "## 4. 测试模型、进行推理\n",
     "\n",
-    "在训练完成后，我们想要运行和测试模型。我们会使用 `peft` 和 `transformers` 将LoRA适配器加载到模型中。"
+    "在训练完成后，我们想要运行和测试模型。我们会使用 `peft` 和 `transformers` 将 LoRA 适配器加载到模型中。"
    ]
   },
   {
